--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+.fixed {
+            position: fixed;
+            top:0; left:0;
+            width: 100%; 
+            z-index:99; }
+
 /* Style for the scroll to top button */
 #scrollToTopBtn {
   position: fixed;
