--- a/styles.css
+++ b/styles.css
@@ -107,3 +107,12 @@
     }
 }
 
+#sfgenerator {
+            padding: 0px 100px;
+}
+
+@media (max-width: 400px) {
+    #sfgenerator {
+            padding: 0px 0px;
+}
+}
